--- a/src/main/java/fxml/RecursosHumanos/Usuarios/Usuarios.fxml
+++ b/src/main/java/fxml/RecursosHumanos/Usuarios/Usuarios.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -12,97 +18,117 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="usuario_container" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.RecursosHumanos.Usuarios.UsuariosController">
+<AnchorPane id="AnchorPane" fx:id="usuario_container" prefHeight="574.0" prefWidth="973.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.RecursosHumanos.Usuarios.UsuariosController">
    <children>
-      <AnchorPane layoutX="250.0" layoutY="-1.0" prefHeight="572.0" prefWidth="750.0">
-         <children>
-            <AnchorPane layoutY="50.0" prefHeight="521.0" prefWidth="750.0">
+      <SplitPane dividerPositions="0.4702258726899384" layoutX="-4.0" layoutY="-4.0" prefHeight="578.0" prefWidth="976.0">
+         <items>
+            <GridPane>
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints maxHeight="266.0" minHeight="10.0" prefHeight="238.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="374.0" minHeight="10.0" prefHeight="266.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="306.0" minHeight="10.0" prefHeight="72.0" vgrow="SOMETIMES" />
+              </rowConstraints>
                <children>
-                  <Label layoutX="49.0" layoutY="200.0" text="Permisos">
-                     <font>
-                        <Font size="20.0" />
-                     </font>
-                  </Label>
-                  <TableView layoutX="49.0" layoutY="229.0" prefHeight="273.0" prefWidth="656.0">
-                    <columns>
-                      <TableColumn minWidth="328.0" prefWidth="75.0" text="Acción" />
-                      <TableColumn minWidth="328.0" prefWidth="75.0" text="Permiso" />
-                    </columns>
+                  <GridPane prefHeight="245.0" prefWidth="484.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="237.0" minWidth="10.0" prefWidth="34.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="467.0" minWidth="10.0" prefWidth="450.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="467.0" minWidth="10.0" prefWidth="450.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints maxHeight="81.0" minHeight="10.0" prefHeight="38.0" vgrow="SOMETIMES" />
+                      <RowConstraints maxHeight="75.0" minHeight="4.0" prefHeight="4.0" vgrow="SOMETIMES" />
+                      <RowConstraints maxHeight="138.0" minHeight="10.0" prefHeight="41.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="138.0" minHeight="9.0" prefHeight="45.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="138.0" minHeight="10.0" prefHeight="37.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="138.0" minHeight="10.0" prefHeight="43.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="138.0" minHeight="10.0" prefHeight="45.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Label prefHeight="34.0" prefWidth="139.0" text="Búsqueda" GridPane.columnIndex="1">
+                           <font>
+                              <Font size="20.0" />
+                           </font>
+                        </Label>
+                        <Line endX="100.0" startX="-100.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Label prefHeight="35.0" prefWidth="237.0" text="Nombre:" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <Label prefHeight="36.0" prefWidth="249.0" text="Apellido:" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <Label prefHeight="35.0" prefWidth="244.0" text="Codigo:" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <Label prefHeight="35.0" prefWidth="244.0" text="Estado:" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <Label prefHeight="35.0" prefWidth="244.0" text="Codigo Rol:" GridPane.columnIndex="1" GridPane.rowIndex="6">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="NombreUsuario" prefHeight="23.0" prefWidth="237.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                        <TextField fx:id="NombreUsuario1" prefHeight="27.0" prefWidth="237.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+                        <TextField fx:id="NombreUsuario11" prefHeight="27.0" prefWidth="237.0" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+                        <TextField fx:id="NombreUsuario12" prefHeight="27.0" prefWidth="237.0" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+                        <TextField fx:id="NombreUsuario121" prefHeight="27.0" prefWidth="237.0" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+                     </children>
+                  </GridPane>
+                  <GridPane GridPane.rowIndex="2">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="324.0" minWidth="10.0" prefWidth="243.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="282.0" minWidth="10.0" prefWidth="212.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints />
+                      <RowConstraints />
+                        <RowConstraints />
+                        <RowConstraints />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="144.0" text="Visualizar" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
+                     </children>
+                  </GridPane>
+                  <TableView fx:id="TablaUsuarios" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.rowIndex="1">
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
+                     <columns>
+                        <TableColumn fx:id="ColumnaNombre" minWidth="62.0" prefWidth="73.0" text="Codigo" />
+                        <TableColumn minWidth="75" prefWidth="109.0" text="Nombre" />
+                        <TableColumn minWidth="75" prefWidth="94.0" text="Apellido" />
+                        <TableColumn minWidth="75" prefWidth="87.0" text="Estado" />
+                        <TableColumn minWidth="75" prefWidth="90.0" text="Codigo Rol" />
+                     </columns>
                   </TableView>
-                  <TitledPane layoutX="51.0" layoutY="33.0" prefHeight="160.0" prefWidth="656.0" text="Información General">
-                     <content>
-                        <AnchorPane prefHeight="180.0" prefWidth="200.0">
-                           <children>
-                              <Label layoutX="26.0" layoutY="22.0" text="Nombres" />
-                              <Label layoutX="26.0" layoutY="57.0" text="Apellidos" />
-                              <Label layoutX="26.0" layoutY="94.0" text="Teléfono" />
-                              <Label layoutX="383.0" layoutY="22.0" text="Correo" />
-                              <Label layoutX="383.0" layoutY="57.0" text="Rol" />
-                              <TextField layoutX="185.0" layoutY="18.0" />
-                              <TextField layoutX="185.0" layoutY="53.0" />
-                              <TextField layoutX="185.0" layoutY="90.0" />
-                              <TextField layoutX="480.0" layoutY="18.0" />
-                              <TextField layoutX="480.0" layoutY="53.0" />
-                           </children>
-                        </AnchorPane>
-                     </content>
-                  </TitledPane>
                </children>
-            </AnchorPane>
-            <Pane prefHeight="50.0" prefWidth="243.0">
-               <children>
-                  <Label layoutX="133.0" layoutY="10.0" text="Detalle del Usuario">
-                     <font>
-                        <Font size="20.0" />
-                     </font>
-                  </Label>
-                  <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="51.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" />
-                  <Line endX="600.0" layoutX="133.0" layoutY="50.0" startX="-100.0" />
-               </children>
-            </Pane>
-         </children>
-      </AnchorPane>
-      <AnchorPane layoutX="-1.0" layoutY="49.0" prefHeight="521.0" prefWidth="250.0">
-         <children>
-            <Label layoutX="12.0" layoutY="28.0" prefHeight="21.0" prefWidth="114.0" text="Nombre:">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <TextField fx:id="NombreUsuario" layoutX="129.0" layoutY="25.0" prefHeight="25.0" prefWidth="106.0" />
-            <TextField fx:id="ApellidoUsuario" layoutX="129.0" layoutY="60.0" prefHeight="25.0" prefWidth="106.0" />
-            <Label layoutX="14.0" layoutY="62.0" prefHeight="21.0" prefWidth="114.0" text="Apellido:">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <Label layoutX="14.0" layoutY="97.0" text="Correo :">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <TextField fx:id="CorreoUsuario" layoutX="129.0" layoutY="95.0" prefHeight="25.0" prefWidth="106.0" />
-            <TableView fx:id="TablaUsuarios" layoutX="14.0" layoutY="180.0" prefHeight="202.0" prefWidth="224.0">
-              <columns>
-                <TableColumn fx:id="ColumnaNombre" prefWidth="70.0" text="Nombre" />
-                <TableColumn fx:id="ColumnaApellido" text="Apellido" />
-                  <TableColumn fx:id="ColumnaCorreo" text="Correo" />
-              </columns>
-            </TableView>
-            <Button id="AnchorPane" layoutX="144.0" layoutY="485.0" mnemonicParsing="false" onAction="#abrirDetalleUsuario" prefHeight="25.0" prefWidth="96.0" text="Visualizar" />
-            <Button layoutX="129.0" layoutY="134.0" mnemonicParsing="false" text="Buscar" />
-         </children>
-      </AnchorPane>
-      <Pane prefHeight="50.0" prefWidth="250.0">
-         <children>
-            <Label layoutX="82.0" layoutY="10.0" text="Usuarios">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Label>
-            <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="17.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true" />
-            <Line endX="100.0" layoutX="125.0" layoutY="47.0" startX="-100.0" />
-         </children>
-      </Pane>
+            </GridPane>
+            <GridPane>
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+            </GridPane>
+         </items>
+      </SplitPane>
    </children>
 </AnchorPane>
