--- a/src/main/java/fxml/Ventas/Promociones/Promociones.fxml
+++ b/src/main/java/fxml/Ventas/Promociones/Promociones.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Ventas.PromocionesController">
+<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Ventas.PromocionesController">
    <children>
       <AnchorPane layoutX="33.0" layoutY="33.0" prefHeight="572.0" prefWidth="250.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="750.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -83,7 +83,7 @@
                      </font>
                   </Label>
                </children></AnchorPane>
-            <AnchorPane layoutX="33.0" layoutY="83.0" prefHeight="522.0" prefWidth="750.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="50.0">
+            <AnchorPane layoutX="-1.0" layoutY="50.0" prefHeight="522.0" prefWidth="750.0" AnchorPane.leftAnchor="-1.0" AnchorPane.topAnchor="50.0">
                <children>
                   <Label layoutX="27.0" layoutY="30.0" text="Código de promoción:">
                      <font>
@@ -92,15 +92,21 @@
                   </Label>
                   <TextField fx:id="txtFieCodigoPromo" layoutX="196.0" layoutY="28.0" prefHeight="25.0" prefWidth="104.0" />
                   <Label layoutX="345.0" layoutY="32.0" text="Válida entre:" />
-                  <DatePicker fx:id="dpFecha1" layoutX="446.0" layoutY="28.0" prefHeight="25.0" prefWidth="89.0" />
+                  <DatePicker fx:id="dpFecha1" layoutX="446.0" layoutY="28.0" prefHeight="25.0" prefWidth="120.0" />
                   <Label layoutX="576.0" layoutY="32.0" text="y" />
-                  <DatePicker fx:id="dpFecha2" layoutX="605.0" layoutY="28.0" prefHeight="25.0" prefWidth="89.0" />
+                  <DatePicker fx:id="dpFecha2" layoutX="605.0" layoutY="28.0" prefHeight="25.0" prefWidth="120.0" />
                   <Label layoutX="27.0" layoutY="67.0" text="Tipo de promoción:">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <ComboBox fx:id="comboBoxTipoPromo" layoutX="196.0" layoutY="65.0" prefHeight="25.0" prefWidth="170.0" />
+                  <ComboBox fx:id="comboBoxTipoPromo" layoutX="196.0" layoutY="65.0" prefHeight="25.0" prefWidth="160.0" />
+                  <Label layoutX="430.0" layoutY="67.0" text="Prioridad:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <ComboBox fx:id="comboxPrioridad" layoutX="565.0" layoutY="65.0" prefWidth="160.0" />
                   <Label layoutX="27.0" layoutY="104.0" text="Producto:">
                      <font>
                         <Font size="14.0" />
@@ -154,7 +160,7 @@
                      </font>
                   </Button>
                   <Line endX="600.0" layoutX="124.0" layoutY="243.0" startX="-100.0" stroke="#bcaaaa" />
-                  <Spinner editable="true" layoutX="26.0" layoutY="260.0" prefHeight="25.0" prefWidth="67.0" />
+                  <Spinner fx:id="spPorc" editable="true" layoutX="26.0" layoutY="260.0" prefHeight="25.0" prefWidth="67.0" />
                   <Label layoutX="110.0" layoutY="262.0" text="\% de Descuento en todo">
                      <font>
                         <Font size="14.0" />
@@ -184,7 +190,7 @@
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextField layoutX="100.0" layoutY="380.0" prefHeight="25.0" prefWidth="620.0" />
+                  <TextField fx:id="desc_concepto" layoutX="100.0" layoutY="380.0" prefHeight="25.0" prefWidth="620.0" />
                   <Label layoutX="14.0" layoutY="427.0" text="Anotaciones:">
                      <font>
                         <Font size="14.0" />
