--- a/src/main/java/fxml/Materiales/Almacenes/Almacenes.fxml
+++ b/src/main/java/fxml/Materiales/Almacenes/Almacenes.fxml
@@ -74,7 +74,27 @@
                      <content>
                         <AnchorPane>
                            <children>
-                              <AnchorPane fx:id="contenedor_grilla" layoutX="31.0" layoutY="31.0" prefHeight="400.0" prefWidth="500.0" style="-fx-background-color: lightblue;" />
+                              <TitledPane animated="false" collapsible="false" layoutX="439.0" layoutY="24.0" prefHeight="228.0" prefWidth="291.0" text="Creacion de Racks:">
+                                 <content>
+                                    <AnchorPane>
+                                       <children>
+                                          <Label layoutX="14.0" layoutY="19.0" text="Largo :" />
+                                          <Label layoutX="15.0" layoutY="64.0" text="Ancho:" />
+                                          <Label layoutX="15.0" layoutY="110.0" text="Altura:" />
+                                          <TextField layoutX="89.0" layoutY="14.0" prefHeight="27.0" prefWidth="179.0" />
+                                          <TextField layoutX="89.0" layoutY="59.0" prefHeight="27.0" prefWidth="179.0" />
+                                          <TextField layoutX="89.0" layoutY="105.0" prefHeight="27.0" prefWidth="179.0" />
+                                          <Button layoutX="169.0" layoutY="152.0" mnemonicParsing="false" text="Guardar" />
+                                          <Button layoutX="66.0" layoutY="152.0" mnemonicParsing="false" text="Cancelar" />
+                                       </children>
+                                    </AnchorPane>
+                                 </content>
+                              </TitledPane>
+                              <TitledPane animated="false" collapsible="false" layoutX="14.0" layoutY="24.0" text="Distribucion de Racks:">
+                                 <content>
+                                    <AnchorPane fx:id="contenedor_grilla" prefHeight="400.0" prefWidth="400.0" style="-fx-background-color: lightblue;" />
+                                 </content>
+                              </TitledPane>
                            </children>
                         </AnchorPane>
                      </content>
