--- a/src/main/java/fxml/General/Dashboard/DashboardBotones.fxml
+++ b/src/main/java/fxml/General/Dashboard/DashboardBotones.fxml
@@ -6,10 +6,4 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="100.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.BotonesAccionesController">
-   <children>
-      <Button layoutX="37.0" layoutY="37.0" mnemonicParsing="false" text="Nuevo" />
-      <Button layoutX="179.0" layoutY="37.0" mnemonicParsing="false" text="Desactivar" />
-      <Button layoutX="104.0" layoutY="37.0" mnemonicParsing="false" onAction="#actionHumo" text="Guardar" />
-   </children>
-</AnchorPane>
+<AnchorPane id="AnchorPane" prefHeight="100.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.BotonesAccionesController" />
