--- a/src/main/java/fxml/General/ParametrosDeSistema/ParametrosDeSistemaBotones.fxml
+++ b/src/main/java/fxml/General/ParametrosDeSistema/ParametrosDeSistemaBotones.fxml
@@ -6,8 +6,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="113.0" prefWidth="365.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+<AnchorPane id="AnchorPane" prefHeight="113.0" prefWidth="365.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.BotonesAccionesController">
    <children>
       <Button layoutX="157.0" layoutY="44.0" mnemonicParsing="false" text="Guardar" />
    </children>
