--- a/src/main/java/fxml/General/ReporteDeErrores/ReporteDeErroresBotones.fxml
+++ b/src/main/java/fxml/General/ReporteDeErrores/ReporteDeErroresBotones.fxml
@@ -8,6 +8,6 @@
 
 <AnchorPane id="AnchorPane" prefHeight="100.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.BotonesAccionesController">
    <children>
-      <Button layoutX="104.0" layoutY="37.0" mnemonicParsing="false" onAction="#actionHumo" text="Guardar" />
+      <Button layoutX="104.0" layoutY="37.0" mnemonicParsing="false" onAction="#onAccion" text="Guardar" />
    </children>
 </AnchorPane>
