--- a/src/main/java/fxml/NavegacionLateral.fxml
+++ b/src/main/java/fxml/NavegacionLateral.fxml
@@ -47,23 +47,14 @@
                               </ImageView>
                            </graphic>
                         </Button>
-                        <Button layoutX="62.0" layoutY="303.0" mnemonicParsing="false" onAction="#abrirBusquedaModulo">
+                        <Button contentDisplay="TOP" layoutY="213.0" mnemonicParsing="false" onAction="#abrirBusquedaModulo" prefHeight="71.0" prefWidth="200.0" text="Parametros de Sistema">
                            <graphic>
-                              <VBox alignment="CENTER" prefHeight="70.0" prefWidth="70.0">
-                                 <children>
-                                    <ImageView fitHeight="40.0" fitWidth="40.0" styleClass="botonImagenImg">
-                                       <image>
-                                          <Image url="@Imagenes/systemParameters_icon.png" />
-                                       </image>
-                                       <VBox.margin>
-                                          <Insets bottom="2.0" />
-                                       </VBox.margin>
-                                    </ImageView>
-                                    <Label text="Parametros de Sistema" />
-                                 </children>
-                              </VBox>
-                           </graphic>
-                        </Button>
+                              <ImageView fitHeight="40.0" fitWidth="40.0" styleClass="botonImagenImg">
+                                 <image>
+                                    <Image url="@Imagenes/systemParameters_icon.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic></Button>
                      </children>
                   </AnchorPane>
                </content>
@@ -94,15 +85,6 @@
                               <ImageView fitHeight="40.0" fitWidth="40.0" styleClass="botonImagenImg">
                                  <image>
                                     <Image url="@Imagenes/rack_icon.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
-                        </Button>
-                        <Button contentDisplay="TOP" layoutY="284.0" mnemonicParsing="false" onAction="#abrirBusquedaModulo" prefHeight="71.0" prefWidth="200.0" text="Reporte de problemas">
-                           <graphic>
-                              <ImageView fitHeight="40.0" fitWidth="40.0" styleClass="botonImagenImg">
-                                 <image>
-                                    <Image url="@Imagenes/problemReport_icon.png" />
                                  </image>
                               </ImageView>
                            </graphic>
