--- a/src/main/java/fxml/Materiales/Productos/Productos.fxml
+++ b/src/main/java/fxml/Materiales/Productos/Productos.fxml
@@ -235,6 +235,87 @@
                               </GridPane>
                            </content>
                         </Tab>
+                        <Tab text="Precios">
+                           <content>
+                              <GridPane>
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="245.0" minWidth="0.0" prefWidth="58.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="673.0" minWidth="10.0" prefWidth="563.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="170.0" minWidth="10.0" prefWidth="128.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints maxHeight="360.0" minHeight="10.0" prefHeight="231.0" vgrow="SOMETIMES" />
+                                  <RowConstraints maxHeight="426.0" minHeight="10.0" prefHeight="230.0" vgrow="SOMETIMES" />
+                                  <RowConstraints maxHeight="159.0" minHeight="0.0" prefHeight="27.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <TableView fx:id="TablaPrecios" prefHeight="232.0" prefWidth="526.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                      <columns>
+                                        <TableColumn fx:id="ColumnaPrecioValor" prefWidth="75.0" text="Precio" />
+                                        <TableColumn fx:id="ColumnaPrecioMoneda" prefWidth="75.0" text="Moneda" />
+                                          <TableColumn fx:id="ColumnaPrecioFechaInicial" prefWidth="75.0" text="Fecha Inicial" />
+                                          <TableColumn fx:id="ColumnaPrecioFechaFinal" prefWidth="75.0" text="Fecha Final" />
+                                      </columns>
+                                       <columnResizePolicy>
+                                          <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                       </columnResizePolicy>
+                                    </TableView>
+                                    <GridPane GridPane.columnIndex="1">
+                                      <columnConstraints>
+                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="277.0" minWidth="10.0" prefWidth="167.0" />
+                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="456.0" minWidth="10.0" prefWidth="185.0" />
+                                          <ColumnConstraints hgrow="SOMETIMES" maxWidth="456.0" minWidth="10.0" prefWidth="213.0" />
+                                      </columnConstraints>
+                                      <rowConstraints>
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                      </rowConstraints>
+                                       <children>
+                                          <Label text="Precio:">
+                                             <font>
+                                                <Font size="14.0" />
+                                             </font>
+                                          </Label>
+                                          <Label text="Moneda:" GridPane.rowIndex="1">
+                                             <font>
+                                                <Font size="14.0" />
+                                             </font>
+                                          </Label>
+                                          <Label text="Inicial" GridPane.columnIndex="1" GridPane.rowIndex="2" GridPane.valignment="TOP">
+                                             <font>
+                                                <Font size="14.0" />
+                                             </font>
+                                          </Label>
+                                          <TextField fx:id="VerPrecio" GridPane.columnIndex="1" />
+                                          <ComboBox fx:id="VerMoneda" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                          <DatePicker fx:id="VerFechaInicial" GridPane.columnIndex="1" GridPane.rowIndex="2" GridPane.valignment="BOTTOM" />
+                                          <DatePicker fx:id="VerFechaFinal" GridPane.columnIndex="2" GridPane.rowIndex="2" GridPane.valignment="BOTTOM" />
+                                          <Label text="Final" GridPane.columnIndex="2" GridPane.rowIndex="2" GridPane.valignment="TOP">
+                                             <font>
+                                                <Font size="14.0" />
+                                             </font>
+                                          </Label>
+                                          <Label text="Fecha:" GridPane.rowIndex="2">
+                                             <font>
+                                                <Font size="14.0" />
+                                             </font>
+                                          </Label>
+                                          <Button mnemonicParsing="false" onAction="#agregar_precio" text="Agregar" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
+                                          <Label text="Fecha:" GridPane.rowIndex="3">
+                                             <font>
+                                                <Font size="14.0" />
+                                             </font>
+                                          </Label>
+                                          <CheckBox fx:id="VerDefault" mnemonicParsing="false" text="Es Default" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                       </children>
+                                    </GridPane>
+                                    <Button mnemonicParsing="false" onAction="#eliminar_precio" prefHeight="43.0" prefWidth="67.0" text="Eliminar" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+                                 </children>
+                              </GridPane>
+                           </content>
+                        </Tab>
                        <Tab text="Distribución">
                             <content>
                                <AnchorPane prefHeight="200.0" prefWidth="200.0">
